cards width fix on tablet

--- a/src/components/card/card.component.scss
+++ b/src/components/card/card.component.scss
@@ -12,8 +12,8 @@
         width: 50%;
     }
     @media (min-width: $mbp-md) {
-        padding-bottom: 33%;
-        width: 33%;
+        padding-bottom: 33.3%;
+        width: 33.3%;
     }
     @media (min-width: $mbp-xl) {
         padding-bottom: 25%;
